# discord-bot-project

./: .gitignore  README.md  pyproject.toml
disbot/: main.py
disbot/cogs/: ban_unban.py  clear.py  eight_ball.py  kick.py  new_joinee.py  ping.py  test.py
tests/: test_disbot.py
